# formgen

./: .gitignore  config_schema.json  debug.py  pyproject.toml  test.py
scripts/: debug.py  test.py
src/formgen/: __init__.py
src/formgen/gen1/: __init__.py  schema.py
src/formgen/gen2/: __init__.py  script.py
